Closed Bug 1676806 Opened 4 years ago Closed 4 years ago

Follow-up fix for bug 1676573

Categories

(Core :: SQLite and Embedded Database Bindings, defect, P2)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox84 --- fixed

People

(Reporter: janv, Assigned: janv)

Details

Attachments

(1 file)

It turns out that the official documentation for in-memory databases has flaws:
https://www.sqlite.org/inmemorydb.html
(or there's an internal bug in sqlite code)

rc = sqlite3_open("file:memdb1?mode=memory&cache=shared", &db);

creates a real file on disk in the current directory

The only thing that seems to reliably work is the SQLITE_OPEN_MEMORY flag.
I'm going to test it more and provide a fix ASAP.

Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/05474075b3e1 Follow-up fix for bug 1676573; r=asuth,dom-workers-and-storage-reviewers
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Product: Toolkit → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: