Bug 1676806 - Follow-up fix for bug 1676573; r=asuth,dom-workers-and-storage-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D96820